Bug 216975 - [clang/lld 4.0.0] kldxref error
Summary: [clang/lld 4.0.0] kldxref error
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Ed Maste
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-10 18:50 UTC by Shawn Webb
Modified: 2017-02-17 00:49 UTC (History)
0 users

See Also:
emaste: mfc-stable11+
emaste: mfc-stable10+
emaste: mfc-stable9-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shawn Webb 2017-02-10 18:50:14 UTC
With the latest HEAD of projects/clang400-import and with the WITH_LLD_IS_LD knob enabled on amd64, kldxref will fail on the newly-built kernel.

kldxref will output the following message:

kldxref: /tmp/newbe/boot/kernel/kernel: too many sections
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-02-10 19:12:06 UTC
A commit references this bug:

Author: emaste
Date: Fri Feb 10 19:11:34 UTC 2017
New revision: 313562
URL: https://svnweb.freebsd.org/changeset/base/313562

Log:
  kldxref: s/sections/segments/ in warning message

  The message refers to program header segments, not sections.

  PR:		216975

Changes:
  head/usr.sbin/kldxref/ef.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2017-02-10 19:18:13 UTC
A commit references this bug:

Author: emaste
Date: Fri Feb 10 19:17:10 UTC 2017
New revision: 313563
URL: https://svnweb.freebsd.org/changeset/base/313563

Log:
  kldxref: bump MAXSEGS to 3

  ld.bfd generates two PT_LOAD segments, but certain linkers or linker
  configurations generate three PT_LOAD segments (one additional for
  RELRO).

  PR:		216975
  Reported by:	Shawn Webb
  MFC after:	1 week
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/usr.sbin/kldxref/ef.c
Comment 3 Mark Linimon freebsd_committer freebsd_triage 2017-02-10 20:31:05 UTC
Over to committer for possible MFC reminder.
Comment 4 commit-hook freebsd_committer freebsd_triage 2017-02-17 00:45:04 UTC
A commit references this bug:

Author: emaste
Date: Fri Feb 17 00:44:48 UTC 2017
New revision: 313845
URL: https://svnweb.freebsd.org/changeset/base/313845

Log:
  MFC r313562: kldxref: s/sections/segments/ in warning message

  The message refers to program header segments, not sections.

  PR:		216975

Changes:
_U  stable/11/
  stable/11/usr.sbin/kldxref/ef.c
Comment 5 commit-hook freebsd_committer freebsd_triage 2017-02-17 00:47:07 UTC
A commit references this bug:

Author: emaste
Date: Fri Feb 17 00:46:16 UTC 2017
New revision: 313846
URL: https://svnweb.freebsd.org/changeset/base/313846

Log:
  MFC r313563: kldxref: bump MAXSEGS to 3

  ld.bfd generates two PT_LOAD segments, but certain linkers or linker
  configurations generate three PT_LOAD segments (one additional for
  RELRO).

  PR:		216975

Changes:
_U  stable/11/
  stable/11/usr.sbin/kldxref/ef.c
Comment 6 commit-hook freebsd_committer freebsd_triage 2017-02-17 00:48:09 UTC
A commit references this bug:

Author: emaste
Date: Fri Feb 17 00:47:44 UTC 2017
New revision: 313847
URL: https://svnweb.freebsd.org/changeset/base/313847

Log:
  MFC r313562: kldxref: s/sections/segments/ in warning message

  The message refers to program header segments, not sections.

  PR:		216975

Changes:
_U  stable/10/
  stable/10/usr.sbin/kldxref/ef.c
Comment 7 commit-hook freebsd_committer freebsd_triage 2017-02-17 00:49:12 UTC
A commit references this bug:

Author: emaste
Date: Fri Feb 17 00:49:01 UTC 2017
New revision: 313848
URL: https://svnweb.freebsd.org/changeset/base/313848

Log:
  MFC r313563: kldxref: bump MAXSEGS to 3

  ld.bfd generates two PT_LOAD segments, but certain linkers or linker
  configurations generate three PT_LOAD segments (one additional for
  RELRO).

  PR:		216975

Changes:
_U  stable/10/
  stable/10/usr.sbin/kldxref/ef.c