kldxref: s/sections/segments/ in warning message

The message refers to program header segments, not sections.

PR:		216975

Former-commit-id: c03619d0ab5a4b9578265d90613c5a9e0b746f9f